--- a/src/_data/categories.yml
+++ b/src/_data/categories.yml
@@ -16,7 +16,10 @@
 - name: 前端框架
   subCategories:
   - name: vue.js
+  - name: react
   - name: webpack
+
+- name: Web安全
 
 - name: 开发工具
   subCategories:
